api, nest-api: added readdir handling
